Fix z-indices overflowing tldr modal on showing

--- a/resources/sass/components/_fancy-quote.scss
+++ b/resources/sass/components/_fancy-quote.scss
@@ -4,7 +4,7 @@
   overflow: hidden;
   background: $primary-100;
   font-size: 20px;
-  z-index: 1;
+  z-index: 0;
   display: flex;
   justify-content: center;
   align-items: center;
